# uni-cnmo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_tinyexpr.bat  run.bat
doc/: CNMO_Laborator_1.md  CNMO_Laborator_2.md
doc/exam/: examen.md
src/: builtin.h  equations.h  func.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profiler.h
src/func/: builtin.h  func.h
src/func/ui/: basicplot.cpp  basicplot.h  curvetracker.cpp  function_selection.cpp  function_selection.h  function_selection.ui
src/polynomial/: builtin.h  lagrange.h  option.h  polynomial.h  shared.h  spline.h  test.bat  test.cpp
src/polynomial/ui/: plot.cpp  plot.h  poly_main.cpp  poly_main.h  poly_main.ui  poly_table_model.cpp  poly_table_model.h  polynomial.cpp
src/qwt/: plot.cpp  plot.h
src/rootfinding/: bisection.h  builtin.h  chord.h  newton.h  option.h  results.txt  secant.h  shared.h  test.bat  test.cpp  util.h
src/rootfinding/ui/: plot.cpp  plot.h  root_finding_main.cpp  root_finding_main.h  root_finding_main.ui  zeros_table_model.cpp  zeros_table_model.h  zeros_table_row.h
